FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
/** end reset css**/
body {
  width: 1140px;
  margin: auto;
  font-family: "Work Sans";
  font-size: 14px;
  background: #fffef8;
}

.edit-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 59px;
  background: #000000;
  margin-bottom: 38px;
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  box-sizing: border-box;
}

.edit-txt {
  color: #ffffff;
}
#edit-icon {
  width: 15px;
  height: 15px;
  margin-right: 11px;
  color: #ffffff;
}

.edit-btn-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 100px 0 10px;
}

.edit-button {
  color: #000000;
  background: none;
  border: none;
  font-size: 15px;
  cursor: pointer;
  padding-left: 30px;
  font-family: "Work Sans";
  font-weight: 550;
}

.fa-pen-to-square {
  padding-right: 10px;
  font-size: small;
}

header {
  display: flex;
  justify-content: space-between;
  margin: 100px 0;
}

.instagram-icon {
  width: 18px;
  height: 18px;
  font-weight: 800;
}

.login-title {
  color: #1d6154;
  font-size: 30px;
  font-weight: 700;
  text-align: center;
  margin: 150px 0 60px 0;
}

.form {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.login-error-message,
.img-error-message,
.img-size-error {
  color: red;
  padding-top: 20px;
}

.email-container,
.password-container {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
}

.password-container {
  margin-top: 30px;
}

#email,
#password {
  width: 379px;
  height: 51px;
  border: none;
  margin-top: 6px;
  background: #fff;
  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
}

.login-btn {
  width: 179px;
  height: 36px;
  background: #1d6154;
  border-radius: 60px;
  border: none;
  color: #fff;
  font-family: "Syne";
  font-weight: 700;
  font-size: 14px;
  margin: 37px 0 28px 0;
  cursor: pointer;
}

.forgot-pass {
  color: #3d3d3d;
  font-weight: 500;
  font-size: 14px;
}

section {
  margin: 50px 0;
}

h1 {
  display: flex;
  flex-direction: column;
  font-family: "Syne";
  font-size: 22px;
  font-weight: 800;
  color: #b1663c;
}

h1 > span {
  font-family: "Work Sans";
  font-size: 10px;
  letter-spacing: 0.1em;
}

h2 {
  font-family: "Syne";
  font-weight: 700;
  font-size: 30px;
  color: #1d6154;
}
nav ul {
  display: flex;
  align-items: center;
  list-style-type: none;
}
nav li {
  padding: 0 20px;
  font-size: 1.2em;
}

ul a {
  text-decoration: none;
  color: #000;
}

li:hover {
  color: #b1663c;
  cursor: pointer;
}
#introduction {
  display: flex;
  align-items: center;
}
#introduction figure {
  flex: 1;
}
#introduction img {
  display: block;
  margin: auto;
  width: 80%;
}

#introduction article {
  flex: 1;
}
#introduction h2 {
  margin-bottom: 1em;
}

#introduction p {
  margin-bottom: 0.5em;
}
#portfolio h2 {
  text-align: center;
}

.categories {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 30px 0 51px 0;
}
.category-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 37px;
  border-radius: 60px;
  border: 1px solid #1d6154;
  font-size: 16px;
  color: #1d6154;
  font-family: Syne;
  font-weight: 700;
  line-height: normal;
  background: #fffef8;
  padding: 20px;
  margin: 10px;
  cursor: pointer;
}

.category-btn:hover {
  color: #fff;
  background: #1d6154;
}

.btn-active {
  color: #fff;
  background: #1d6154;
}

.gallery {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
}

.gallery img {
  width: 100%;
}

#contact {
  width: 50%;
  margin: auto;
}
#contact > * {
  text-align: center;
}
#contact h2 {
  margin-bottom: 20px;
}
#contact form {
  text-align: left;
  margin-top: 30px;
  display: flex;
  flex-direction: column;
}

#contact input {
  height: 50px;
  font-size: 1.2em;
  border: none;
  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}
#contact label {
  margin: 2em 0 1em 0;
}
#contact textarea {
  border: none;
  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"] {
  font-family: "Syne";
  font-weight: 700;
  color: white;
  background-color: #1d6154;
  margin: 2em auto;
  width: 180px;
  text-align: center;
  border-radius: 60px;
}

/*FIRST MODAL*/
/* The Modal (background) */
.modal-container {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto; /* Enable scroll if needed */
  background-color: rgba(0, 0, 0, 0.3);
}

/* Modal Content/Box */
.modal-content,
.add-modal-content {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 630px;
  height: 688px;
  background-color: #ffffff;
  margin: 15% auto; /* 15% from the top and centered */
  border-radius: 10px;
  position: relative;
}

.modal-title,
.add-modal-title {
  font-family: "Work Sans";
  font-size: 26px;
  position: absolute;
  top: 60px;
}

/* The Close Button */
.close-button {
  font-size: large;
  color: #000000;
  float: right;
  background: none;
  border: none;
  position: absolute;
  top: 20px;
  right: 25px;
  cursor: pointer;
}

.works-container img {
  width: 76.86px;
  height: 102.57px;
  margin: 14px 0px;
  position: relative;
}

.delete-btn {
  width: 20px;
  height: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  background-color: #000000;
  border-radius: 3px;
  position: relative;
  top: 20px;
  right: 30px;
  cursor: pointer;
  border: none;
}

.fa-trash-can {
  font-size: xx-small;
}

.works-container {
  width: calc(77px * 5 + 5 * 20px);
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin-bottom: 67px;
}

.add-button {
  width: 237px;
  height: 36px;
  color: #ffffff;
  background: #1d6154;
  border: none;
  border-radius: 60px;
  font-family: "Syne";
  font-size: 14px;
  font-weight: bold;
  position: absolute;
  bottom: 45px;
  cursor: pointer;
}

.add-button::before {
  content: "";
  width: 420px;
  border: 1px solid #b3b3b3;
  position: absolute;
  left: -40%;
  bottom: 80px;
  color: #b3b3b3;
  margin: 0;
  padding: 0;
}

/*FIRST MODAL*/

/*SECOND MODAL*/

.uploaded-image {
  max-width: 30%;
  height: 100%;
  overflow: hidden;
}

.add-modal-container {
  position: fixed;
  z-index: 2;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto; /* Enable scroll if needed */
  background-color: rgba(0, 0, 0, 0.3);
}

.add-picture-container {
  width: 420px;
  height: 169px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: #e8f1f6;
  box-sizing: border-box;
  position: relative;
}

.add-picture-btn {
  width: 173px;
  height: 36px;
  color: #306685;
  background: #cbd6dc;
  border: none;
  border-radius: 50px;
  font-family: "Work Sans";
  font-size: 15px;
  font-weight: 600;
  position: absolute;
  bottom: 35px;
  cursor: pointer;
}

.return-button {
  font-size: large;
  color: #000000;
  float: right;
  background: none;
  border: none;
  position: absolute;
  top: 20px;
  left: 25px;
  cursor: pointer;
}

.picture-size-txt {
  position: absolute;
  bottom: 15px;
  font-size: 10px;
  font-family: "Work Sans";
  color: #444444;
}

.fa-image {
  font-size: 70px;
  color: #b9c5cc;
  padding: 5px;
  position: absolute;
  top: 15px;
}

.validate-button {
  width: 237px;
  height: 36px;
  color: #ffffff;
  background: #a7a7a7;
  border: none;
  border-radius: 60px;
  font-family: "Syne";
  font-size: 14px;
  font-weight: bold;
  position: absolute;
  bottom: 45px;
  cursor: pointer;
}

.validate-button-active {
  background: #1d6154;
}

.validate-button::before {
  content: "";
  width: 420px;
  border: 1px solid #b3b3b3;
  position: absolute;
  left: -40%;
  bottom: 70px;
  color: #b3b3b3;
  margin: 0;
  padding: 0;
}

.modal-form {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: 30px;
}
.modal-form input {
  width: 424px;
  height: 53px;
  border: none;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
  margin: 20px 0;
  padding: 0 5px;
  box-sizing: border-box;
}

#select-category {
  -webkit-appearance: none;
  width: 424px;
  height: 53px;
  border: none;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
  margin: 20px 0;
  position: relative;
  cursor: pointer;
  padding: 0 5px;
  border: none;
  box-sizing: border-box;
}

.modal-form::after {
  content: "\f078";
  font-family: "Font Awesome 5 Free";
  font-weight: 600;
  font-size: xx-small;
  color: #6c6c6c;
  position: absolute;
  bottom: 190px;
  right: 130px;
}

/*SECOND MODAL*/

footer nav ul {
  display: flex;
  justify-content: flex-end;
  margin: 2em;
}

.login-footer {
  width: 100%;
  position: fixed;
  bottom: 0;
  right: 20px;
  background: #ffffff;
}

